{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 82,
  "lineage": "a263b041-9660-314b-7052-ceb4e08aba67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-6a78ab8d103875a7e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-6a78ab8d103875a7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "node_group_one20250324021939632000000008",
            "name_prefix": "node_group_one",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-2b6c02f5426e795e0",
            "description": "Allow inbound traffic from EKS cluster to PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-2b6c02f5426e795e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-6a78ab8d103875a7e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "freqtrade-rds-development",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "freqtrade-rds-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "freqtrade-rds-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_group_one",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-18ef8080b9b2531bd",
            "default_route_table_id": "rtb-18ef8080b9b2531bd",
            "id": "rtb-18ef8080b9b2531bd",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-dfea9fe8a77a565c3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-dfea9fe8a77a565c3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-81724177d18970e13",
            "arn": "arn:aws:ec2:us-east-1:000000000000:elastic-ip/eipalloc-81724177d18970e13",
            "association_id": "eipassoc-18bd763006edf3565",
            "domain": "vpc",
            "id": "eipalloc-81724177d18970e13",
            "network_interface": "eni-d97f1c78fddaa96ef",
            "private_dns": "ip-10-127-242-4.ec2.internal",
            "private_ip": "10.127.242.4",
            "public_dns": "ec2-127-242-160-6.compute-1.amazonaws.com",
            "public_ip": "127.242.160.6",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-a7eabf867d1454c78",
            "id": "igw-a7eabf867d1454c78",
            "owner_id": "000000000000",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development",
              "Terraform": "true"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-81724177d18970e13",
            "association_id": "eipassoc-18bd763006edf3565",
            "connectivity_type": "public",
            "id": "nat-8371b02a0332e5377",
            "network_interface_id": "eni-d97f1c78fddaa96ef",
            "private_ip": "10.127.242.4",
            "public_ip": "127.242.160.6",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-4ad8375bcd669d650",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-dc9fbe1ec1326b7b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-8371b02a0332e5377",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-dc9fbe1ec1326b7b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-a7eabf867d1454c78",
            "id": "r-rtb-9629cd31c471eb0b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-9629cd31c471eb0b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-dc9fbe1ec1326b7b3",
            "id": "rtb-dc9fbe1ec1326b7b3",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-8371b02a0332e5377",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-9629cd31c471eb0b2",
            "id": "rtb-9629cd31c471eb0b2",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-a7eabf867d1454c78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-cd7edf7446631ba24",
            "route_table_id": "rtb-dc9fbe1ec1326b7b3",
            "subnet_id": "subnet-93c25b3979b39fc0f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-8bb539df5c6609284",
            "route_table_id": "rtb-dc9fbe1ec1326b7b3",
            "subnet_id": "subnet-d5ede8513d388d82b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-6ec5afdb318cf8a09",
            "route_table_id": "rtb-dc9fbe1ec1326b7b3",
            "subnet_id": "subnet-9013f01d0a879b46b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-48710710577f68d68",
            "route_table_id": "rtb-9629cd31c471eb0b2",
            "subnet_id": "subnet-4ad8375bcd669d650"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-d880b9dd598e6f09d",
            "route_table_id": "rtb-9629cd31c471eb0b2",
            "subnet_id": "subnet-96bdd553fbff3b8ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-465d371f05c08972b",
            "route_table_id": "rtb-9629cd31c471eb0b2",
            "subnet_id": "subnet-d0ecd5b677245ffa6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-93c25b3979b39fc0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-93c25b3979b39fc0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-d5ede8513d388d82b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-d5ede8513d388d82b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-9013f01d0a879b46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-9013f01d0a879b46b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private-us-east-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-private-us-east-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-4ad8375bcd669d650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-4ad8375bcd669d650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-96bdd553fbff3b8ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-96bdd553fbff3b8ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-d0ecd5b677245ffa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-d0ecd5b677245ffa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public-us-east-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development-public-us-east-1c",
              "Terraform": "true",
              "kubernetes.io/cluster/freqtrade-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-59a38d3577140c6bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-59a38d3577140c6bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-c88d3837e25577968",
            "default_route_table_id": "rtb-18ef8080b9b2531bd",
            "default_security_group_id": "sg-dfea9fe8a77a565c3",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-59a38d3577140c6bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-18ef8080b9b2531bd",
            "owner_id": "000000000000",
            "tags": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development",
              "Terraform": "true"
            },
            "tags_all": {
              "Application": "freqtrade",
              "Environment": "development",
              "Name": "freqtrade-vpc-development",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}